--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      document.body.style.fontSize = "16px"
+    </script>
   </body>
 </html>
